# rust-bisect

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
ci/: Cargo.toml.multirust-override  before_deploy.sh  install.sh  script.sh
examples/: rust-issue-30123.rs
examples/rust-issue-30123/: Cargo.toml
examples/rust-issue-30123/aux-crate/: Cargo.toml
examples/rust-issue-30123/src/: lib.rs
src/: bisect.rs  cli.rs  lib.rs  main.rs
